Create DataModel AnalysisType for Support User Defined Schemas (#1945)
* adding endpoints and control logic for new resourcetype: DataModel

* fixing error returned

* fmt and cleanup

* adding logic to handle datamodels in bulk upload

* linter

* adding missing field in get enabled endpoint

* allow jsonpath in the field parameter

* rename mapping to datamodelmapping

* remove duplicate check and unnecessary logger messages

* add check for atleast a method or field

* update return status

* for now, only allow one logtype per data model

* remove old comments; do not create empty slice
