# internal/core/analysis_api/handlers/bulk_upload.go
@@ -89,6 +89,10 @@ func BulkUpload(request *events.APIGatewayProxyRequest) *events.APIGatewayProxyR
 		ModifiedGlobals: aws.Int64(0),
 		NewGlobals:      aws.Int64(0),
 		TotalGlobals:    aws.Int64(0),
+
+		ModifiedDataModels: aws.Int64(0),
+		NewDataModels:      aws.Int64(0),
+		TotalDataModels:    aws.Int64(0),
 	}
 
 	var response *events.APIGatewayProxyResponse
@@ -131,6 +135,13 @@ func BulkUpload(request *events.APIGatewayProxyRequest) *events.APIGatewayProxyR
 				*counts.NewGlobals++
 			} else if result.changeType == updatedItem {
 				*counts.ModifiedGlobals++
+			}
+		case typeDataModel:
+			*counts.TotalDataModels++
+			if result.changeType == newItem {
+				*counts.NewDataModels++
+			} else if result.changeType == updatedItem {
+				*counts.ModifiedDataModels++
 			}
 		}
 	}
@@ -239,6 +250,17 @@ func extractZipFile(input *models.BulkUpload) (map[models.ID]*tableItem, error) 
 
 		typeNormalizeTableItem(&analysisItem, config)
 
+		// ensure Mappings are nil rather than an empty slice
+		if len(config.Mappings) > 0 {
+			analysisItem.Mappings = make([]*models.DataModelMapping, len(config.Mappings))
+			for i, mapping := range config.Mappings {
+				analysisItem.Mappings[i], err = buildMapping(mapping)
+				if err != nil {
+					return nil, err
+				}
+			}
+		}
+
 		for i, test := range config.Tests {
 			// A test can specify a resource and a resource type or a log and a log type.
 			// By convention, log and log type are used for rules and resource and resource type are used for policies.
@@ -265,7 +287,8 @@ func extractZipFile(input *models.BulkUpload) (map[models.ID]*tableItem, error) 
 			if err := validateUploadedPolicy(policy, input.UserID); err != nil {
 				return nil, err
 			}
-		} else {
+		} else if policy.Type != typeDataModel {
+			// it is ok for DataModels to be missing python body
 			return nil, fmt.Errorf("policy %s is missing a body", policy.ID)
 		}
 	}
@@ -306,6 +329,13 @@ func typeNormalizeTableItem(item *tableItem, config analysis.Config) {
 			item.ID = "panther"
 		}
 	}
+
+	if item.Type == string(models.AnalysisTypeDATAMODEL) {
+		item.ID = models.ID(config.DataModelID)
+		if len(config.ResourceTypes) == 0 {
+			item.ResourceTypes = config.LogTypes
+		}
+	}
 }
 
 func buildRuleTest(test analysis.Test) (*models.UnitTest, error) {
@@ -334,6 +364,20 @@ func buildPolicyTest(test analysis.Test) (*models.UnitTest, error) {
 	}, nil
 }
 
+func buildMapping(mapping analysis.Mapping) (*models.DataModelMapping, error) {
+	if mapping.Field != "" && mapping.Method != "" {
+		return nil, errMappingTooManyOptions
+	}
+	if mapping.Field == "" && mapping.Method == "" {
+		return nil, errFieldOrMethodMissing
+	}
+	return &models.DataModelMapping{
+		Name:   models.SourceName(mapping.Name),
+		Field:  models.Field(mapping.Field),
+		Method: models.Method(mapping.Method),
+	}, nil
+}
+
 func readZipFile(zf *zip.File) ([]byte, error) {
 	f, err := zf.Open()
 	if err != nil {
@@ -349,12 +393,19 @@ func readZipFile(zf *zip.File) ([]byte, error) {
 
 // Ensure that the uploaded policy is valid according to the API spec for a Policy
 func validateUploadedPolicy(item *tableItem, userID models.UserID) error {
-	if item.Type != typePolicy && item.Type != typeRule && item.Type != typeGlobal {
+	if item.Type != typePolicy && item.Type != typeRule && item.Type != typeGlobal && item.Type != typeDataModel {
 		return fmt.Errorf("policy ID %s is invalid: unknown analysis type %s", item.ID, item.Type)
 	}
 
-	if item.Type == typeGlobal {
+	if item.Type == typeGlobal || item.Type == typeDataModel {
 		item.Severity = models.SeverityINFO
+	}
+
+	// for now, only allow one LogType per DataModel
+	if item.Type == typeDataModel {
+		if len(item.ResourceTypes) > 1 {
+			return errDataModelTooManyLogTypes
+		}
 	}
 
 	policy := item.Policy(models.ComplianceStatusPASS) // Convert to the external Policy model for validation
